Event Data model data layer added (controller, service, repo, and db sps/tbl) Event service added to web RSVP page changes for dialog windows for guest addition and welcome popup showing up.

--- a/DigitalRSVP.WAPI/log4net.config
+++ b/DigitalRSVP.WAPI/log4net.config
@@ -11,7 +11,7 @@
     </layout>
   </appender>
   <appender name="file" type="log4net.Appender.RollingFileAppender">
-    <file value="Logs\RacingBuddy.WAPI.log" />
+    <file value="Logs\DigitalRSVP.WAPI.log" />
     <appendToFile value="true" />
     <rollingStyle value="Size" />
     <maxSizeRollBackups value="5" />
